--- a/BlackJack.html
+++ b/BlackJack.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="BlackJack.css">
 </head>
 <body>
-    <h1>WhiteJack</h1>
+    <h1>GreenJack</h1>
     <p id="message-el">Want to play a round?</p>
     <p id="card-el">Cards:</p>
     <p id="sum-el">Sum:</p>
